<resources>
    <string name="app_name">PRTracker</string>
    <string name="fab_desc">Add new lift</string>
    <string name="lift_exercise_header">Exercise:</string>
    <string name="lift_weight_header">Weight:</string>
    <string name="lift_date_header">Date:</string>
    <string name="lift_desc_header">Description:</string>
    <string name="weight_type_kilograms">kgs</string>
    <string name="weight_type_pounds">lbs</string>
    <string name="sort_lifts_by">Sort By:</string>
    <string name="exercise_alphabetical">Exercise, Alphabetical</string>
    <string name="heaviest_first">Heaviest First</string>
    <string name="lightest_first">Lightest First</string>
    <string name="most_recent">Most Recent First</string>
    <string name="least_recent">Least Recent First</string>
    <string name="record_new_video">Record New Video</string>
    <string name="select_existing_video">Select Existing Video</string>
</resources>